--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pitecan.DialEasyWidget"
+    package="com.pitecan.dialeasy"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18" />
 
     <application
-        android:icon="@drawable/toshiyuki"
+        android:icon="@drawable/phone"
         android:label="@string/app_name" >
         <receiver
             android:name="DialEasyWidget"
@@ -22,10 +22,10 @@
         </receiver>
 
         <service
-            android:name="DialEasyWidgetService"
+            android:name="DialEasyService"
             android:exported="false" >
             <intent-filter>
-                <action android:name="com.pitecan.DialEasyWidget.ACTION_BTNCLICK" />
+                <action android:name="com.pitecan.dialeasy.ACTION_BTNCLICK" />
             </intent-filter>
         </service>
     </application>
