--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,15 +3,15 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18" />
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19" />
 
     <application
         android:icon="@drawable/phone"
         android:label="@string/app_name" >
         <receiver
-            android:name="DialEasyWidget"
+            android:name="DialEasy"
             android:exported="false"
-            android:label="DialEasyWidget" >
+            android:label="DialEasy" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -25,7 +25,7 @@
             android:name="DialEasyService"
             android:exported="false" >
             <intent-filter>
-                <action android:name="com.pitecan.dialeasy.ACTION_BTNCLICK" />
+                <action android:name="com.pitecan.dialeasy.ACTION_CALL" />
             </intent-filter>
         </service>
     </application>
