--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+
+    <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18" />
 
     <application
         android:icon="@drawable/phone"
