--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,10 +6,10 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 
-    <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18" />
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19" />
 
     <application
-        android:icon="@drawable/phone"
+        android:icon="@drawable/masui"
         android:label="@string/app_name" >
         <receiver
             android:name="DialEasy"
@@ -24,13 +24,6 @@
                 android:resource="@xml/dialeasy_info" />
         </receiver>
 
-        <service
-            android:name="DialEasyService"
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="com.pitecan.dialeasy.ACTION_CALL" />
-            </intent-filter>
-        </service>
     </application>
 
 </manifest>
